# repo-organizer

./: LICENSE  README.md  pyproject.toml  repo-organizer  repo-organizer.code-workspace  requirements.txt  setup.py
doc/development/: training-disclosure.md
repoorganizer/: __init__.py  moregitcli.py  repocollection.py  ro_main.py
