[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoorganizer"
version = "1.0.0"
description = "Tool to organize and manage GitHub repositories."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["GitHub", "repositories", "organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "hierosoft @ git+https://github.com/Hierosoft/hierosoft.git@main"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[project.scripts]
repoorganizer = "repoorganizer.__init__:main"
